# rawView

./: CMakeLists.txt
include/rawview/: buffer.hpp
src/: main.cpp
